@@ -7,6 +7,7 @@ Changes for 1.5:
 
 Changes for 1.4.1:
 
+ - fixed crash in processing of active checks on agent side (Alexei)
  - minor fix of misc/conf/zabbix_server.conf (Alexei)
  - fixed linkage of applications in 1.1.x migration scripts (Alexei)
  - fixed permissiong of Admin in 1.1.x migration scripts (Alexei)
